# python-distance-rasters

./: .gitignore  Cargo.toml  LICENSE.txt  MANIFEST.in  README.md  cdist_example.py  corrections.py  dist_to_lines.py  distance.py  example.py  main.py  publish.sh  pyproject.toml  rasterize.py  requirements.txt  run_kdtree.py  setup.cfg  setup.py  test_dist_to_lines.py  test_quadrant_search.py  utils.py
.github/workflows/: build-and-publish.yml  publish-to-test-pypi.yml  test-and-publish-nightly.yml  test-and-publish.yml  test-with-coverage.yml  test.yml
ca_riv_30s/: ca_riv_30s.shp.htm  ca_riv_30s.shp.xml  ca_riv_30s.shx
data/: big_line.shp  big_line.shx  line_test.shp
data/ca_riv_15s/: ca_riv_15s.dbf  ca_riv_15s.sbn  ca_riv_15s.sbx  ca_riv_15s.shp.htm  ca_riv_15s.shp.xml  ca_riv_15s.shx
data/ca_riv_30s/: ca_riv_30s.dbf  ca_riv_30s.sbn  ca_riv_30s.sbx
data/line_test/: line_test.dbf
examples/: adv_rasterization_example.py  build_dist_to_water.py  cdist_example.py  example_job  linestrings.geojson  simple_example.py
line_test/: line_test.shx
src/: distance.rs  haversine.rs  lib.rs
src/distance-rasters/: distance.py
src/distancerasters/: __init__.py  main.py  utils.py
tests/: test_main.py  test_utils.py
use_cases/: build_dist_to_roads.py  build_dist_to_water.py
