[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
authors = [{ name = "Seth Goodman", email = "sgoodman@aiddata.wm.edu" }]
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["raster", "distance", "spatial"]
license = { text = "BSD 3-Clause License" }
name = "distancerasters"
version = "0.5.0"
description = "Generate distance raster using arbitrary sets of spatial features"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "rasterio",
    "fiona",
    "affine",
    "rasterstats",
]

[project.urls]
source = "https://github.com/sgoodm/python-distance-rasters"
issues = "https://github.com/sgoodm/python-distance-rasters/issues"

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "geopandas>=1.0.1",
    "maturin>=1.12.6",
    "pytest>=8.3.3",
    "shapely",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "distancerasters._distancerasters"
python-source = "src"
