[metadata]
name = distancerasters
version = 0.3.1
description = Generate distance raster using arbitrary sets of spatial features
long_description = file:README.md
long_description_content_type = text/markdown
author = Seth Goodman
author_email = sgoodman@aiddata.wm.edu
url = https://github.com/sgoodm/python-distance-rasters
project_urls =
    Bug Tracker = https://github.com/sgoodm/python-distance-rasters/issues
license = BSD 3-Clause License
keywords = raster, distance, spatial
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
# python_requires = >=3.x
install_requires =
    numpy
    rasterio
    fiona
    affine
    scipy>=1.6.0
    rasterstats

[options.packages.find]
where = src
